# LifeGame-Android

./: .gitignore  .gitignore.bak  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/example/lifequest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/java/com/example/lifequest/: MainActivity.kt
app/src/main/java/com/example/lifequest/ai/: LlamaInference.kt  LocalModelHandler.kt  ModelFileManager.kt  TaskInfo.kt  TaskParser.kt  UserIntent.kt
app/src/main/java/com/example/lifequest/data/: Converters.kt
app/src/main/java/com/example/lifequest/data/dao/: RewardDao.kt  TaskDao.kt
app/src/main/java/com/example/lifequest/data/database/: AppDatabase.kt
app/src/main/java/com/example/lifequest/data/entity/: RewardItem.kt  TaskEntity.kt
app/src/main/java/com/example/lifequest/repository/: TaskRepository.kt
app/src/main/java/com/example/lifequest/ui/components/: TaskCard.kt
app/src/main/java/com/example/lifequest/ui/screens/: ChatScreen.kt  RewardScreen.kt  SettingsScreen.kt  TaskListScreen.kt
app/src/main/java/com/example/lifequest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/lifequest/viewmodel/: MainViewModel.kt  SettingsViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/lifequest/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
